--- a/style.css
+++ b/style.css
@@ -28,7 +28,6 @@ nav{
     justify-content: center;
     font-weight: 400;
 }
-
 nav a{
     text-decoration: none;
     color:var(--bg-color);
@@ -48,4 +47,19 @@ transition: trasnform 0.1s;
 }
 #graficos-container {
 margin: 5rem;
+}
+footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--primary-color);
+    color: var(--bg-color);
+    width: 100%;
+    height: 3rem;
+    margin-top: 2rem;
+}
+span{
+    font-weight: bold;
+    color:white;
+    background-color: var(--secundary-color);
 }
